Layout rework to make full use of Bootstrap flexible layout so that hardcoded pixel dimensions are not used in CSS calc(). Nav moved into body to get proper sizing for subsequent elements. Additional Divs added to make resizing work. Controller Messages box has min-height so always visible; otherwise resizes to available space. Fixed JS resizing to shrink when window made smaller.

--- a/static/styles/frontpage.css
+++ b/static/styles/frontpage.css
@@ -4,9 +4,8 @@
   height: calc(100vh - 85px)
 }
 
-.flex-fixed-width-item {
+.sidebar {
   flex: 0 0 410px;
-  height: calc(100vh - 85px);
 }
 
 .text-nowrap {
@@ -20,7 +19,6 @@
 }
 
 .scrollText {
-  height: calc(100vh - 750px);
   overflow-y: scroll;
 }
 
@@ -29,19 +27,11 @@
   overflow-y: scroll;
 }
 
-.container-fluid {
-}
-
 html, body {
-  height: 100vh;
-}
-
-.flex-fill {
-  flex: 1;
+  height: 100%;
 }
 
 .fullWorkArea {
-  height: calc(100vh - 85px);
   cursor: none;
 }
 
@@ -162,7 +152,13 @@ html, body {
 }
 
 #controllerMessage {
-  overflow-wrap: anywhere;
+  position: absolute;
+  overflow: auto;
+  min-height: 150px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 #stickyButtons {
